traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:30: error: ';' expected but 'else' found.
  else {
  ^